--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,36 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Deploy to EC2
+
+      - name: Deploy to EC2 via SSH (Key Authentication)
         uses: appleboy/ssh-action@v0.1.8
+        continue-on-error: true  # Allow fallback if this fails
         with:
           host: ${{ secrets.AWS_HOST }}
           username: ubuntu
-          key: ${{ secrets.AWS_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd fastapi-app-book-project
+            set -e  # Exit if any command fails
+            cd /home/cd/Testing-project
             git reset --hard HEAD
             git pull origin main --force
-            source venv/bin/activate
+            source myenv/bin/activate
             pip install -r requirements.txt
-            sudo systemctl restart fastapi
+            sudo systemctl restart fastapi || echo "Failed to restart fastapi"
+            sudo systemctl restart nginx || echo "Failed to restart nginx"
+
+      - name: Install sshpass (For Password Authentication)
+        if: failure()  
+        run: sudo apt-get install -y sshpass
+
+      - name: Deploy to EC2 via SSH (Password Authentication)
+        if: failure() 
+        run: |
+          cd /home/cd/Testing-project
+          git reset --hard HEAD
+          git pull origin main --force
+          source venv/bin/activate
+          pip install -r requirements.txt
+          sudo systemctl restart fastapi || echo 'Failed to restart fastapi'
+          sudo systemctl restart nginx || echo 'Failed to restart nginx'
+          "
